--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -27,6 +27,19 @@
      <string>Open customer screen</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_newBusinessExpense">
+    <property name="geometry">
+     <rect>
+      <x>120</x>
+      <y>200</y>
+      <width>171</width>
+      <height>27</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>New business expense</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
