Updated the UIs of the forms to (more or less) match the design

--- a/ExpenseDialog.ui
+++ b/ExpenseDialog.ui
@@ -114,6 +114,26 @@
     </item>
    </layout>
   </widget>
+  <widget class="QLabel" name="label_welcome">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>10</y>
+     <width>251</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>22</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Business Expense</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
