--- a/CustomerDialog.ui
+++ b/CustomerDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>361</width>
-    <height>417</height>
+    <height>455</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>30</y>
+     <y>60</y>
      <width>271</width>
      <height>331</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>380</y>
+     <y>410</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -187,7 +187,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>380</y>
+     <y>410</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -200,13 +200,33 @@
    <property name="geometry">
     <rect>
      <x>130</x>
-     <y>380</y>
+     <y>410</y>
      <width>97</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
     <string>Add new job</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_customer">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>20</y>
+     <width>131</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>22</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="text">
+    <string>Customer</string>
    </property>
   </widget>
  </widget>
