--- a/dialogs/job/JobEdit.ui
+++ b/dialogs/job/JobEdit.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>JobNew</class>
- <widget class="QDialog" name="JobNew">
+ <class>JobEdit</class>
+ <widget class="QDialog" name="JobEdit">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -48,8 +48,8 @@
   <widget class="QWidget" name="formLayoutWidget_2">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>330</y>
+     <x>50</x>
+     <y>320</y>
      <width>261</width>
      <height>128</height>
     </rect>
@@ -123,37 +123,11 @@
     <string>Cancel</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_addPart">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>170</y>
-     <width>97</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Add part</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_addTask">
-   <property name="geometry">
-    <rect>
-     <x>330</x>
-     <y>270</y>
-     <width>97</width>
-     <height>27</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Add task</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_completionState">
    <property name="geometry">
     <rect>
      <x>50</x>
-     <y>480</y>
+     <y>470</y>
      <width>121</width>
      <height>17</height>
     </rect>
@@ -166,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>180</x>
-     <y>480</y>
+     <y>470</y>
      <width>131</width>
      <height>27</height>
     </rect>
@@ -199,7 +173,7 @@
     <rect>
      <x>20</x>
      <y>10</y>
-     <width>121</width>
+     <width>161</width>
      <height>21</height>
     </rect>
    </property>
@@ -211,14 +185,37 @@
     </font>
    </property>
    <property name="text">
-    <string>New Job</string>
+    <string>Editing Job</string>
+   </property>
+  </widget>
+  <widget class="QListWidget" name="listWidget_partsE">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>130</y>
+     <width>256</width>
+     <height>71</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_addTask">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>220</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add task</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_part">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>140</y>
+     <x>50</x>
+     <y>110</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -227,11 +224,11 @@
     <string>Parts</string>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget_partsE">
+  <widget class="QListWidget" name="listWidget_tasksE">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>160</y>
+     <x>50</x>
+     <y>220</y>
      <width>256</width>
      <height>71</height>
     </rect>
@@ -240,8 +237,8 @@
   <widget class="QLabel" name="label_tasks">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>230</y>
+     <x>50</x>
+     <y>200</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -250,27 +247,43 @@
     <string>Tasks</string>
    </property>
   </widget>
-  <widget class="QListWidget" name="listWidget_tasksE">
+  <widget class="QPushButton" name="pushButton_addPart">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>250</y>
-     <width>256</width>
-     <height>71</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_addNewCustomer">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>70</y>
-     <width>141</width>
+     <x>310</x>
+     <y>140</y>
+     <width>97</width>
      <height>27</height>
     </rect>
    </property>
    <property name="text">
-    <string>Add new customer</string>
+    <string>Add part</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_editPart">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>170</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Edit part</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_editTask">
+   <property name="geometry">
+    <rect>
+     <x>310</x>
+     <y>250</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Edit task</string>
    </property>
   </widget>
  </widget>
