Got Parts dialogs working

--- a/dialogs/main/MainWindow.ui
+++ b/dialogs/main/MainWindow.ui
@@ -297,7 +297,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Add new job</string>
+     <string>View all jobs</string>
     </property>
    </widget>
   </widget>
