--- a/dialogs/expense/ExpenseForm.ui
+++ b/dialogs/expense/ExpenseForm.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ExpenseNew</class>
- <widget class="QDialog" name="ExpenseNew">
+ <class>ExpenseForm</class>
+ <widget class="QDialog" name="ExpenseForm">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -44,7 +44,7 @@
     <rect>
      <x>80</x>
      <y>50</y>
-     <width>227</width>
+     <width>266</width>
      <height>245</height>
     </rect>
    </property>
@@ -58,9 +58,6 @@
        <string>Date</string>
       </property>
      </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QDateEdit" name="dateEdit_date"/>
     </item>
     <item row="1" column="0">
      <widget class="QLabel" name="label_description">
@@ -76,9 +73,6 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="lineEdit_priceExclVat"/>
-    </item>
     <item row="3" column="0">
      <widget class="QLabel" name="label_vat">
       <property name="text">
@@ -86,18 +80,12 @@
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
-     <widget class="QLineEdit" name="lineEdit_vat"/>
-    </item>
     <item row="4" column="0">
      <widget class="QLabel" name="label_totalPrice">
       <property name="text">
        <string>Total Price</string>
       </property>
      </widget>
-    </item>
-    <item row="4" column="1">
-     <widget class="QLineEdit" name="lineEdit_totalPrice"/>
     </item>
     <item row="5" column="0">
      <widget class="QLabel" name="label_typeHeading">
@@ -112,14 +100,44 @@
     <item row="1" column="1">
      <widget class="QPlainTextEdit" name="plainTextEdit_description"/>
     </item>
+    <item row="2" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_priceExclVat">
+      <property name="prefix">
+       <string>£</string>
+      </property>
+      <property name="maximum">
+       <double>1000000000.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_vat">
+      <property name="prefix">
+       <string>£</string>
+      </property>
+      <property name="maximum">
+       <double>1000000000.000000000000000</double>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QLabel" name="label_totalPriceE">
+      <property name="text">
+       <string>total price</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDateTimeEdit" name="dateTimeEdit_date"/>
+    </item>
    </layout>
   </widget>
-  <widget class="QLabel" name="label_businessExpense">
+  <widget class="QLabel" name="label_businessExpenseFormTitle">
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>10</x>
      <y>10</y>
-     <width>251</width>
+     <width>371</width>
      <height>31</height>
     </rect>
    </property>
@@ -131,7 +149,7 @@
     </font>
    </property>
    <property name="text">
-    <string>Business Expense</string>
+    <string>Expense form title</string>
    </property>
   </widget>
  </widget>
