--- a/dialogs/job/JobForm.ui
+++ b/dialogs/job/JobForm.ui
@@ -341,6 +341,19 @@
     </item>
    </layout>
   </widget>
+  <widget class="QPushButton" name="pushButton_viewCustomer">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>100</y>
+     <width>141</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>View customer</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
