--- a/dialogs/job/JobForm.ui
+++ b/dialogs/job/JobForm.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>510</width>
-    <height>644</height>
+    <width>769</width>
+    <height>624</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,7 +49,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>330</y>
+     <y>300</y>
      <width>267</width>
      <height>111</height>
     </rect>
@@ -123,7 +123,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>600</y>
+     <y>570</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -136,7 +136,7 @@
    <property name="geometry">
     <rect>
      <x>270</x>
-     <y>600</y>
+     <y>570</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -148,8 +148,8 @@
   <widget class="QPushButton" name="pushButton_addPart">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>170</y>
+     <x>660</x>
+     <y>180</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -161,8 +161,8 @@
   <widget class="QPushButton" name="pushButton_addTask">
    <property name="geometry">
     <rect>
-     <x>330</x>
-     <y>270</y>
+     <x>660</x>
+     <y>280</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -175,7 +175,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>520</y>
+     <y>490</y>
      <width>241</width>
      <height>31</height>
     </rect>
@@ -247,8 +247,8 @@
   <widget class="QLabel" name="label_part">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>140</y>
+     <x>400</x>
+     <y>150</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -260,8 +260,8 @@
   <widget class="QListWidget" name="listWidget_partsE">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>160</y>
+     <x>400</x>
+     <y>170</y>
      <width>256</width>
      <height>71</height>
     </rect>
@@ -270,8 +270,8 @@
   <widget class="QLabel" name="label_tasks">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>230</y>
+     <x>400</x>
+     <y>240</y>
      <width>41</width>
      <height>17</height>
     </rect>
@@ -283,8 +283,8 @@
   <widget class="QListWidget" name="listWidget_tasksE">
    <property name="geometry">
     <rect>
-     <x>70</x>
-     <y>250</y>
+     <x>400</x>
+     <y>260</y>
      <width>256</width>
      <height>71</height>
     </rect>
@@ -307,7 +307,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>480</y>
+     <y>450</y>
      <width>351</width>
      <height>29</height>
     </rect>
@@ -352,6 +352,29 @@
    </property>
    <property name="text">
     <string>View customer</string>
+   </property>
+  </widget>
+  <widget class="QPlainTextEdit" name="plainTextEdit_description">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>180</y>
+     <width>261</width>
+     <height>101</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_description">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>150</y>
+     <width>81</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Description</string>
    </property>
   </widget>
  </widget>
