--- a/dialogs/part/PartForm.ui
+++ b/dialogs/part/PartForm.ui
@@ -39,7 +39,7 @@
      <x>60</x>
      <y>60</y>
      <width>211</width>
-     <height>128</height>
+     <height>161</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -87,13 +87,30 @@
     <item row="3" column="1">
      <widget class="QDoubleSpinBox" name="doubleSpinBox_vatRate"/>
     </item>
+    <item row="4" column="0">
+     <widget class="QLabel" name="label_quantity">
+      <property name="text">
+       <string>Quantity</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="1">
+     <widget class="QSpinBox" name="spinBox_quantity">
+      <property name="minimum">
+       <number>1</number>
+      </property>
+      <property name="maximum">
+       <number>1000000000</number>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QPushButton" name="pushButton_submit">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>220</y>
+     <x>40</x>
+     <y>250</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -105,8 +122,8 @@
   <widget class="QPushButton" name="pushButton_cancel">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>220</y>
+     <x>200</x>
+     <y>250</y>
      <width>97</width>
      <height>27</height>
     </rect>
