--- a/dialogs/part/PartShow.ui
+++ b/dialogs/part/PartShow.ui
@@ -39,7 +39,7 @@
      <x>60</x>
      <y>70</y>
      <width>211</width>
-     <height>81</height>
+     <height>98</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
@@ -85,6 +85,20 @@
      <widget class="QLabel" name="label_vatRateE">
       <property name="text">
        <string>vat rate</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Quantity</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="1">
+     <widget class="QLabel" name="label_quantityE">
+      <property name="text">
+       <string>quantity</string>
       </property>
      </widget>
     </item>
