--- a/dialogs/main/MainWindow.ui
+++ b/dialogs/main/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>896</width>
-    <height>498</height>
+    <height>407</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -194,12 +194,12 @@
      <rect>
       <x>240</x>
       <y>300</y>
-      <width>131</width>
+      <width>101</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>View all expenses</string>
+     <string>All expenses</string>
     </property>
    </widget>
    <widget class="QListWidget" name="listWidget_jobs">
@@ -274,7 +274,7 @@
      <string>Tasks for</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_searchForJob">
+   <widget class="QPushButton" name="pushButton_addNewJob">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -284,10 +284,10 @@
      </rect>
     </property>
     <property name="text">
-     <string>Search for job</string>
+     <string>All jobs</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_addNewJob">
+   <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -297,20 +297,25 @@
      </rect>
     </property>
     <property name="text">
-     <string>View all jobs</string>
+     <string>All customers</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QLabel" name="label_remindCustomers">
     <property name="geometry">
      <rect>
-      <x>476</x>
-      <y>350</y>
-      <width>151</width>
-      <height>27</height>
+      <x>550</x>
+      <y>300</y>
+      <width>341</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="text">
-     <string>View all customers</string>
+     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#da0000;&quot;&gt;There are jobs that have not been paid after 7 days!&lt;/span&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#da0000;&quot;&gt;Click here to send a reminder to the customers&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
   </widget>
